[package]
name = "test_vm"
description = "Reference vm for integration testing builtin actors"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]
publish = false

[lib]

[dependencies]
fil_builtin_actors_state = { version = "10.0.0-alpha.1", path = "../state"}
fil_actors_runtime = { version = "10.0.0-alpha.1", path = "../runtime", features = [ "test_utils" ] }
fil_actor_init = { version = "10.0.0-alpha.1", path = "../actors/init" }
fil_actor_cron = { version = "10.0.0-alpha.1", path = "../actors/cron" }
fil_actor_system = { version = "10.0.0-alpha.1", path = "../actors/system" }
fil_actor_account = { version = "10.0.0-alpha.1", path = "../actors/account" }
fil_actor_multisig = { version = "10.0.0-alpha.1", path = "../actors/multisig" }
fil_actor_paych = { version = "10.0.0-alpha.1", path = "../actors/paych" }
fil_actor_reward = { version = "10.0.0-alpha.1", path = "../actors/reward" }
fil_actor_power = { version = "10.0.0-alpha.1", path = "../actors/power" }
fil_actor_market = { version = "10.0.0-alpha.1", path = "../actors/market" }
fil_actor_verifreg = { version = "10.0.0-alpha.1", path = "../actors/verifreg" }
fil_actor_miner = { version = "10.0.0-alpha.1", path = "../actors/miner" }
fil_actor_datacap = { version = "10.0.0-alpha.1", path = "../actors/datacap" }

anyhow = "1.0.65"
bimap = { version = "0.6.2" }
blake2b_simd = "1.0"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
frc46_token = "3.1.0"
fvm_actor_utils = "3.0.0"
fvm_ipld_bitfield = "0.5.2"
fvm_ipld_blockstore = { version = "0.1.1", default-features = false }
fvm_ipld_encoding = { version = "0.3.3", default-features = false }
fvm_ipld_hamt = "0.6.1"
fvm_shared = { version = "3.0.0-alpha.17", default-features = false }
indexmap = { version = "1.8.0", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
multihash = { version = "0.16.1", default-features = false }
test-case = "2.2.1"
