[package]
name = "test_vm"
description = "Reference vm for integration testing builtin actors"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]
publish = false

[lib]

[dependencies]
fil_builtin_actors_state = { workspace = true }
fil_actors_runtime = { workspace = true, features = [ "test_utils" ] }
fil_actor_init = { workspace = true }
fil_actor_cron = { workspace = true }
fil_actor_system = { workspace = true }
fil_actor_account = { workspace = true }
fil_actor_multisig = { workspace = true }
fil_actor_paych = { workspace = true }
fil_actor_reward = { workspace = true }
fil_actor_power = { workspace = true }
fil_actor_market = { workspace = true }
fil_actor_verifreg = { workspace = true }
fil_actor_miner = { workspace = true }
fil_actor_datacap = { workspace = true }
fil_actor_evm = { workspace = true }
fil_actor_eam = { workspace = true }
fil_actor_ethaccount = { workspace = true }

anyhow = { workspace = true }
bimap = { version = "0.6.2" }
blake2b_simd = "1.0"
cid = { workspace = true }
frc42_dispatch = { workspace = true }
frc46_token = { workspace = true }
fvm_actor_utils = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
indexmap = { version = "1.8.0", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static = "1.4.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1"
serde = { workspace = true }
thiserror = "1.0.30"
libsecp256k1 = { version = "0.7.1"}
fil_actors_evm_shared = { workspace = true }

[dev-dependencies]
cid = { workspace = true }
multihash = { workspace = true }
test-case = "2.2.1"
ethers = { version = "0.17.0", features = ["abigen"] }
hex = "0.4.3"
hex-literal = "0.3.4"
