[package]
name = "test_vm"
description = "Reference vm for integration testing builtin actors"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm"]
publish = false

[lib]

[dependencies]
fil_builtin_actors_state = { workspace = true }
fil_actors_runtime = { workspace = true, features = [ "test_utils" ] }
fil_actor_init = { workspace = true }
fil_actor_cron = { workspace = true }
fil_actor_system = { workspace = true }
fil_actor_account = { workspace = true }
fil_actor_multisig = { workspace = true }
fil_actor_paych = { workspace = true }
fil_actor_reward = { workspace = true }
fil_actor_power = { workspace = true }
fil_actor_market = { workspace = true }
fil_actor_verifreg = { workspace = true }
fil_actor_miner = { workspace = true }
fil_actor_datacap = { workspace = true }
fil_actor_evm = { workspace = true }
fil_actor_eam = { workspace = true }
fil_actor_ethaccount = { workspace = true }
fil_actors_evm_shared = { workspace = true }

anyhow = { workspace = true }
blake2b_simd = { workspace = true }
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
integer-encoding = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
vm_api = { workspace = true }

[dev-dependencies]
multihash = { workspace = true }
test-case = { workspace = true }
fil_actors_integration_tests = { workspace = true }
