[package]
name = "vm_api"
description = "Abstract virtual machine interface used for testing FVM native wasm actors"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]
publish = false

[lib]

[dependencies]
fil_actors_runtime = { workspace = true, features = [ "test_utils" ] }

anyhow = { workspace = true }
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }

