[package]
name = "fil_actor_account"
description = "Builtin account actor for Filecoin"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_actor_utils = { workspace = true }
fvm_shared = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { workspace = true, features = ["test_utils", "sector-default"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
