[package]
name = "fil_actor_account_state_v8"
description = "Builtin account actor for Filecoin"
version = "8.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2018"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "9.0.0", path = "../../runtime", features = ["fil-actor"] }
fvm_shared = { version = "2", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"

[dev-dependencies]
fil_actors_runtime = { version = "9.0.0", path = "../../runtime", features = ["test_utils", "sector-default"] }

[features]
fil-actor = []

