[package]
name = "fvm_actor_cron"
description = "Builtin cron actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/canonical-actors"

[lib]
crate-type = ["cdylib"]

[dependencies]
actors-runtime = { path = "../runtime" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "raulk/extract-actors", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actors-runtime = { path = "../runtime", features = ["test_utils"] }
