[package]
name = "fil_actor_cron"
description = "Builtin cron actor for Filecoin"
version = "6.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2018"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
actors-runtime = { version = "6.0.0", path = "../runtime" }
fvm_shared = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actors-runtime = { version = "6.0.0", path = "../runtime", features = ["test_utils"] }

[build-dependencies]
fil_builtin_actors_builder = { version = "0.1.0", path = "../../builder" }

[features]
wasm = []