[package]
name = "fil_actor_datacap"
description = "Builtin data cap actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2018"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "10.0.0-alpha.1", path = "../../runtime"}

cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
frc42_dispatch = "3.0.1-alpha.2"
frc46_token = "4.0.1-alpha.1"
fvm_actor_utils = "4.0.1-alpha.1"
fvm_ipld_blockstore = { path = "../../../ref-fvm/ipld/blockstore" }
fvm_ipld_encoding = { path = "../../../ref-fvm/ipld/encoding"}
fvm_ipld_hamt = { path = "../../../ref-fvm/ipld/hamt" }
fvm_shared = { path = "../../../ref-fvm/shared", default-features = false }
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.14"

[dev-dependencies]
fil_actors_runtime = { path = "../../runtime", features = ["test_utils", "sector-default"] }
[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
