[package]
name = "fil_actor_delegator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
fil-actor = [
  "fil_actors_runtime/fil-actor",
]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
fil_actors_runtime = { path = "../../runtime" }
fil_actors_evm_shared = { path = "../evm/shared" }
frc42_dispatch = { workspace = true }
rlp = { version = "0.5", default-features = false, features = ["std"] }
serde = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { path = "../../runtime", features = ["test_utils"] }
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rlp = { version = "0.5", default-features = false, features = ["std"] }
