[package]
name = "fil_actor_eam"
description = "Builtin Ethereum address manager actor for Filecoin"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "12.0.0", path = "../../runtime" }
serde = { workspace = true }
serde_tuple = "0.5"
rlp = { version = "0.5.1", default-features = false }
anyhow = { workspace = true }
log = "0.4.14"
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
multihash = { workspace = true }
cid = { workspace = true }
fvm_shared = { workspace = true }
num-traits = "0.2.15"
num-derive = "0.3.3"
hex-literal = "0.3.4"
fil_actors_evm_shared = { version = "12.0.0", path = "../evm/shared" }

[dev-dependencies]
fil_actor_evm = { path = "../evm"}
fil_actors_runtime = { path = "../../runtime", features = ["test_utils"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
