[package]
name = "fil_actor_ethaccount"
description = "Builtin Ethereum Externally Owned Address actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "10.0.0-alpha.1", path = "../../runtime" }
frc42_dispatch = "3.0.1-alpha.2"
fvm_actor_utils = "4.0.1-alpha.1"
serde = { version = "1.0.136", features = ["derive"] }
fvm_ipld_encoding = "0.3.3"
fvm_shared = { version = "3.0.0-alpha.20", default-features = false }
num-traits = "0.2.15"
num-derive = "0.3.3"
hex-literal = "0.3.4"

[dev-dependencies]
fil_actors_runtime = { path = "../../runtime", features = ["test_utils"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
