[package]
name = "fil_actor_ethaccount"
description = "Builtin Ethereum Externally Owned Address actor for Filecoin"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_actor_utils = { workspace = true }
serde = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
hex-literal = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
