[package]
name = "fil_actor_evm"
description = "Builtin EVM actor for Filecoin"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "evm"]
exclude = ["/precompile-testdata", "/tests/measurements", "/tests/contracts"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_kamt = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
cid = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
multihash = { workspace = true }
frc42_dispatch = { workspace = true }
fil_actors_evm_shared = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
substrate-bn = { workspace = true }

[dev-dependencies]
hex = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
fil_actors_runtime = { workspace = true, features = ["test_utils", "sector-default"] }
etk-asm = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }


[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
