[package]
name        = "fil_actor_init_state_v9"
description = "Builtin init actor for Filecoin"
version     = "9.0.3"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/filecoin-project/builtin-actors"
keywords    = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow                    = "1.0.65"
cid                       = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fil_actors_runtime_common = { version = "9.0.3", path = "../../runtime" }
fvm_ipld_blockstore       = "0.1.1"
fvm_ipld_encoding         = "0.2.2"
fvm_ipld_hamt             = "0.5.1"
fvm_shared                = { version = "2.0.0-alpha.2", default-features = false }
log                       = "0.4.14"
num-derive                = "0.3.3"
num-traits                = "0.2.14"
serde                     = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
fil_actors_runtime_common = { version = "9.0.3", path = "../../runtime", features = ["test_utils", "sector-default"] }

[features]
fil-actor = ["fil_actors_runtime_common/fil-actor"]
