[package]
name        = "fil_actor_market_state_v8"
description = "Builtin market actor for Filecoin"
version     = "8.0.0"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/filecoin-project/builtin-actors"
keywords    = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow                    = "1.0.56"
cid                       = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fil_actors_runtime_common = { version = "10.0.0-alpha.1", path = "../../runtime", features = [] }
fvm_ipld_bitfield         = "0.5.2"
fvm_ipld_blockstore       = "0.1.1"
fvm_ipld_encoding         = "0.2.2"
fvm_ipld_hamt             = "0.5.1"
fvm_shared                = { version = "2", default-features = false }
libipld-core              = { version = "0.13.1", features = ["serde-codec"] }
log                       = "0.4.14"
num-derive                = "0.3.3"
num-traits                = "0.2.14"
serde                     = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
fil_actor_power_state_v8 = { version = "8.0.0", path = "../power_state_v8" }
fil_actor_reward_state_v8 = { version = "8.0.0", path = "../reward_state_v8" }
fil_actor_verifreg_state_v8 = { version = "8.0.0", path = "../verifreg_state_v8" }
fil_actors_runtime_common = { version = "10.0.0-alpha.1", path = "../../runtime", features = [
  "test_utils",
  "sector-default",
] }
fvm_ipld_amt = { version = "0.4.2", features = ["go-interop"] }
itertools = "0.10"
multihash = { version = "0.16.1", default-features = false }
regex = "1"

[features]
fil-actor = []
