[package]
name = "fil_actor_miner"
description = "Builtin miner actor for Filecoin"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
serde = { workspace = true }
cid = { workspace = true }
anyhow = { workspace = true }
multihash = { workspace = true }
num-traits = "0.2.14"
num-derive = "0.3.3"
lazy_static = "1.4.0"
log = "0.4.14"
byteorder = "1.4.3"
itertools = "0.10.3"

[dev-dependencies]
fil_actors_runtime = { workspace = true, features = ["test_utils", "sector-default"] }
fil_actor_account = { workspace = true }
fil_actor_reward = { workspace = true }
fil_actor_power = { workspace = true }
fil_actor_market = { workspace = true }
rand = "0.8.5"
test-case = "2.2.1"

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
