[package]
name = "fil_actor_miner"
description = "Builtin miner actor for Filecoin"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
bitflags = { workspace = true }
fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
serde = { workspace = true }
cid = { workspace = true }
anyhow = { workspace = true }
multihash = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
byteorder = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { workspace = true, features = ["test_utils", "sector-default"] }
fil_actor_account = { workspace = true }
fil_actor_reward = { workspace = true }
fil_actor_power = { workspace = true }
fil_actor_market = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }
const-hex = { workspace = true }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
