[package]
name = "fil_actor_miner_state_v8"
description = "Builtin miner actor for Filecoin"
version = "8.0.0"
license = "MIT OR Apache-2.0"
authors = [
    "ChainSafe Systems <info@chainsafe.io>",
    "Protocol Labs",
    "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime_common = { version = "9.0.0", path = "../../runtime", features = [
    
] }
fvm_shared = { version = "2", default-features = false }
fvm_ipld_bitfield = "0.5.2"
fvm_ipld_amt = { version = "0.4.2", features = ["go-interop"] }
fvm_ipld_hamt = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
cid = { version = "0.8.3", default-features = false, features = [
    "serde-codec",
] }
num-traits = "0.2.14"
num-derive = "0.3.3"
lazy_static = "1.4.0"
log = "0.4.14"
byteorder = "1.4.3"
anyhow = "1.0.56"
itertools = "0.10.3"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"

[features]
fil-actor = []
